# ecomm-prod-assistant

./: Dockerfile  pyproject.toml  requirements.txt  scrapper_ui.py
.github/workflows/: deploy.yml  infra.yml
data/: product_reviews.csv
infra/: eks-with-ecr.yml
k8/: deployment.yaml  service.yaml
notebook/: test.ipynb
prod_assistant/etl/: data_ingestion.py  data_scrapper.py
prod_assistant/mcp_servers/: client.py  product_search_server.py
prod_assistant/retriever/: retrieval.py
prod_assistant/router/: main.py
prod_assistant/utils/: model_loader.py
prod_assistant/workflow/: agentic_workflow_with_mcp_websearch.py
